python/cdk.out/fargate-nginx.template.json
{
  "Resources": {
    "ClusterEB0386A7": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/Cluster/Resource"
      }
    },
    "FargateServiceLBB353E155": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "FargateServiceLBSecurityGroup5F444C78",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Fn::ImportValue": "VpcStack:ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456"
          },
          {
            "Fn::ImportValue": "VpcStack:ExportsOutputRefVpcPublicSubnet2Subnet691E08A351552740"
          },
          {
            "Fn::ImportValue": "VpcStack:ExportsOutputRefVpcPublicSubnet3SubnetBE12F0B65CC33245"
          }
        ],
        "Type": "application"
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/LB/Resource"
      }
    },
    "FargateServiceLBSecurityGroup5F444C78": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB fargatenginxFargateServiceLBCD7C7F9C",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Fn::ImportValue": "VpcStack:ExportsOutputRefVpc8378EB38272D6E3A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/LB/SecurityGroup/Resource"
      }
    },
    "FargateServiceLBSecurityGrouptofargatenginxFargateServiceSecurityGroup144DABE0801D5ACD4D": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "FargateServiceLBSecurityGroup5F444C78",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "FargateServiceSecurityGroup262B61DD",
            "GroupId"
          ]
        },
        "FromPort": 80,
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/LB/SecurityGroup/to fargatenginxFargateServiceSecurityGroup144DABE0:80"
      }
    },
    "FargateServiceLBPublicListener4B4929CA": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "FargateServiceLBPublicListenerECSGroupBE57E081"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "FargateServiceLBB353E155"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/LB/PublicListener/Resource"
      }
    },
    "FargateServiceLBPublicListenerECSGroupBE57E081": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "VpcId": {
          "Fn::ImportValue": "VpcStack:ExportsOutputRefVpc8378EB38272D6E3A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "FargateServiceTaskDefTaskRole8CDCF85E": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/TaskDef/TaskRole/Resource"
      }
    },
    "FargateServiceTaskDef940E3A80": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": "nginx",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "FargateServiceTaskDefwebLogGroup71FAF541"
                },
                "awslogs-stream-prefix": "FargateService",
                "awslogs-region": "us-west-2"
              }
            },
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "FargateServiceTaskDefExecutionRole9194820E",
            "Arn"
          ]
        },
        "Family": "fargatenginxFargateServiceTaskDef846234B9",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "FargateServiceTaskDefTaskRole8CDCF85E",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/TaskDef/Resource"
      }
    },
    "FargateServiceTaskDefwebLogGroup71FAF541": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/TaskDef/web/LogGroup/Resource"
      }
    },
    "FargateServiceTaskDefExecutionRole9194820E": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/TaskDef/ExecutionRole/Resource"
      }
    },
    "FargateServiceTaskDefExecutionRoleDefaultPolicy827E7CA2": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FargateServiceTaskDefwebLogGroup71FAF541",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "FargateServiceTaskDefExecutionRoleDefaultPolicy827E7CA2",
        "Roles": [
          {
            "Ref": "FargateServiceTaskDefExecutionRole9194820E"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
      }
    },
    "FargateServiceECC8084D": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "TaskDefinition": {
          "Ref": "FargateServiceTaskDef940E3A80"
        },
        "Cluster": {
          "Ref": "ClusterEB0386A7"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 80,
            "TargetGroupArn": {
              "Ref": "FargateServiceLBPublicListenerECSGroupBE57E081"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "FargateServiceSecurityGroup262B61DD",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Fn::ImportValue": "VpcStack:ExportsOutputRefVpcPrivateSubnet1Subnet536B997AFD4CC940"
              },
              {
                "Fn::ImportValue": "VpcStack:ExportsOutputRefVpcPrivateSubnet2Subnet3788AAA1380949A3"
              },
              {
                "Fn::ImportValue": "VpcStack:ExportsOutputRefVpcPrivateSubnet3SubnetF258B56EC7CF32DD"
              }
            ]
          }
        }
      },
      "DependsOn": [
        "FargateServiceLBPublicListenerECSGroupBE57E081",
        "FargateServiceLBPublicListener4B4929CA"
      ],
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/Service/Service"
      }
    },
    "FargateServiceSecurityGroup262B61DD": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "fargate-nginx/FargateService/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Fn::ImportValue": "VpcStack:ExportsOutputRefVpc8378EB38272D6E3A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/Service/SecurityGroup/Resource"
      }
    },
    "FargateServiceSecurityGroupfromfargatenginxFargateServiceLBSecurityGroup4F01F7458011E26483": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 80,
        "GroupId": {
          "Fn::GetAtt": [
            "FargateServiceSecurityGroup262B61DD",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "FargateServiceLBSecurityGroup5F444C78",
            "GroupId"
          ]
        },
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "fargate-nginx/FargateService/Service/SecurityGroup/from fargatenginxFargateServiceLBSecurityGroup4F01F745:80"
      }
    }
  },
  "Outputs": {
    "FargateServiceLoadBalancerDNS9433D5F6": {
      "Value": {
        "Fn::GetAtt": [
          "FargateServiceLBB353E155",
          "DNSName"
        ]
      }
    },
    "ServiceURL": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "FargateServiceLBB353E155",
                "LoadBalancerFullName"
              ]
            },
            "/"
          ]
        ]
      }
    }
  }
}
